# fero

./: .gitignore  LICENSE  NOTICE  README.md  release-please-config.json  rename_build.sh
.github/workflows/: build.yml  lint.yml  release-please.yml  release.yml
app/main/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/main/src-tauri/: Cargo.toml  tauri.conf.json
app/main/src-tauri/capabilities/: migrated.json
app/main/src-tauri/src/: main.rs  notification.rs  store.rs
app/main/src-tauri/src/cmds/: change_visibility.rs  mod.rs  save_clipboard_image.rs  send_payload.rs  send_to_rs.rs
app/main/src/components/: HomePage.vue
app/main/src/composables/: ContentStatus.vue  Heading.vue  SideMenu.vue
app/main/src/vue_lib/: types.ts  utils.ts
app/main/src/vue_lib/helper/: ParamsHelper.d.ts
core_lib/: Cargo.toml  package-lock.json  package.json
core_lib/src/: bin.rs  manager.rs
core_lib/src/hdl/: mod.rs  outbound.rs
